--- a/team and client/style.css
+++ b/team and client/style.css
@@ -13,10 +13,11 @@
 }
 
 .hilmi-header ul {
-  margin: 12px 3px 14px 218px;
+  margin: 12px 3px 14px 0px;
+  padding: 0;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1016px) {
   .hilmi-header {
     width: 100vw;
     margin-left: -35px;
@@ -35,7 +36,7 @@
   margin: 11px 0px 12px 44px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1016px) {
   .logo {
     margin: 0px;
     margin-left: 10px;
@@ -52,10 +53,9 @@
 .menu {
   float: right;
   line-height: 100px;
-  margin-left: 240px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1016px) {
   .menu {
     margin-right: 0px;
   }
@@ -69,6 +69,12 @@
   padding: 0px 40px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
+}
+
+@media (max-width: 1250px) {
+  .menu a {
+    padding: 0px 20px;
+  }
 }
 
 .menu a:hover {
@@ -103,7 +109,7 @@
   visibility: hidden;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1016px) {
   .show-menu-btn,
   .hide-menu-btn {
     display: block;
