--- a/team and client/_navbar.scss
+++ b/team and client/_navbar.scss
@@ -2,8 +2,9 @@
 $primary-color: #8f25D6;
 $btn-bg-color: black;
 $btn-color: white;
-$tablet:800px;
+$tablet:1016px;
 $mobile:375px;
+
 //MIXIN //
 @mixin tablet {
     @media (max-width: #{$tablet}) {
@@ -29,10 +30,14 @@ $mobile:375px;
     z-index: 20;
     width: 100vw;
     margin-left: -50px;
+
     ul {
-        margin: 12px 3px 14px 218px;
+        margin: 12px 3px 14px 0px;
+        padding: 0;
     }
+
     @include mobile() {}
+
     @include tablet() {
         width: 100vw;
         margin-left: -35px;
@@ -49,11 +54,13 @@ $mobile:375px;
     color: $btn-color;
     cursor: pointer;
     margin: 11px 0px 12px 44px;
+
     @include tablet() {
         margin: 0px;
         margin-left: 10px;
         margin: 8px 8px 16px 14px;
     }
+
     @include mobile() {
         font-size: 30px;
     }
@@ -62,7 +69,8 @@ $mobile:375px;
 .menu {
     float: right;
     line-height: 100px;
-    margin-left: 240px;
+
+
     @include tablet() {
         margin-right: 0px;
     }
@@ -75,6 +83,13 @@ $mobile:375px;
     font-weight: bold;
     padding: 0px 40px;
     transition: 0.4s;
+
+    @media (max-width:1250px) {
+        padding: 0px 20px;
+    }
+
+
+
     &:hover {
         background-color: $btn-color;
         border-radius: 30px;
@@ -107,10 +122,12 @@ $mobile:375px;
 }
 
 @include tablet() {
+
     .show-menu-btn,
     .hide-menu-btn {
         display: block;
     }
+
     .menu {
         position: relative;
         width: 100%;
@@ -123,17 +140,21 @@ $mobile:375px;
         line-height: normal;
         transition: 0.7s;
         z-index: 10;
+
     }
+
     .menu a {
         display: block;
         margin: 20px;
         padding: 10px;
     }
+
     .hide-menu-btn {
         position: absolute;
         top: 40px;
         right: 40px;
     }
+
     #chk:checked~.menu {
         right: 0;
     }
