--- a/_navbar.scss
+++ b/_navbar.scss
@@ -4,7 +4,6 @@ $btn-bg-color: black;
 $btn-color: white;
 $tablet:800px;
 $mobile:375px;
-
 //MIXIN //
 @mixin tablet {
     @media (max-width: #{$tablet}) {
@@ -19,79 +18,52 @@ $mobile:375px;
 }
 
 .hilmi-header {
-    position: fixed;
-    left: 30px;
-    margin-top: -20px;
-    height: 100px;
-    padding: 0 10px;
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: space-between;
+    font-size: 1rem;
+    align-items: center;
+    max-width: 100%;
     color: $btn-color;
     background: $primary-color;
-    opacity: .9;
-    z-index: 20;
-    width: 100vw;
-    margin-left: -50px;
-
-    ul {
-        margin: 12px 3px 14px 218px;
-    }
-
     @include mobile() {}
-
-    @include tablet() {
-        width: 100vw;
-        margin-left: -35px;
-        left: 28px;
-    }
+    @include tablet() {}
 }
 
 .logo {
     line-height: 100px;
-    float: left;
     color: $primary-color;
-    margin-left: 60px;
-    font-size: 35px;
+    font-size: 2rem;
     color: $btn-color;
     cursor: pointer;
-    margin: 11px 0px 12px 44px;
-
-
-    @include tablet() {
-        margin: 0px;
-        margin-left: 10px;
-        margin: 8px 8px 16px 14px;
-    }
-
+    margin-left: 20px;
+    @include tablet() {}
     @include mobile() {
         font-size: 30px;
     }
 }
 
 .menu {
-    float: right;
-    line-height: 100px;
-    margin-left: 240px;
-
+    display: flex;
+    flex-wrap: wrap;
     @include tablet() {
         margin-right: 0px;
     }
 }
 
 .menu a {
+    margin: 20px;
     color: $btn-color;
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
-    padding: 0px 40px;
     transition: 0.4s;
-
-
-
     &:hover {
         background-color: $btn-color;
         border-radius: 30px;
-        padding: 10px 40px;
-
-
+        padding: 10px;
+        padding-right: 20px;
+        font-style: italic;
         color: $primary-color;
         transition: .5s;
     }
@@ -116,48 +88,41 @@ $mobile:375px;
 
 #chk {
     position: absolute;
-    visibility: hidden;
+    display: none;
 }
 
 @include tablet() {
-
     .show-menu-btn,
     .hide-menu-btn {
         display: block;
     }
-
     .menu {
-        position: relative;
+        display: none;
         width: 100%;
         height: 100vh;
         background: $primary-color;
         right: -100%;
-        bottom: 50px;
-
         text-align: center;
         padding: 80px 0;
         line-height: normal;
         transition: 0.7s;
         z-index: 10;
-
-
     }
-
     .menu a {
-        display: block;
         margin: 20px;
-        padding: 10px;
-
-        &:hover {}
     }
-
     .hide-menu-btn {
         position: absolute;
-        top: 40px;
-        right: 40px;
+        top: 550px;
+        right: 315px;
+        @include mobile() {
+            display: none;
+        }
     }
-
     #chk:checked~.menu {
+        display: flex;
+        flex-direction: column;
+        opacity: 0.7;
         right: 0;
     }
 }
